--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section class="hero-section text-corporate-white py-20 md:py-32" id="home">
         <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
             <div>
-                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight">Your Trusted Partner for Quality Construction Materials</h1>
+                <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold mb-4 leading-tight">Your trusted partner for quality construction materials</h1>
                 <p class="text-lg md:text-xl mb-6 font-regular">RWN Construction FZCO is your premier source for building and construction materials in the Middle East. We are committed to quality, reliability, and strong partnerships.</p>
                 <a href="#contact" class="bg-corporate-blue text-corporate-white px-8 py-3 rounded-md text-lg font-regular inline-block cta-button">Request a Quote</a>
             </div>
@@ -138,7 +138,7 @@
 
     <section id="values" class="py-16 md:py-24 bg-gray-50">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black text-center mb-12">Our Guiding Principles</h2>
+            <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black text-center mb-12">Our guiding principles</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8">
                 <div class="text-center p-6 bg-corporate-white rounded-lg shadow-md">
                      <div class="bg-corporate-blue text-white rounded-full w-16 h-16 flex items-center justify-center mx-auto mb-4">
@@ -181,7 +181,7 @@
 
      <section id="why-choose-us" class="py-16 md:py-24">
         <div class="container mx-auto px-6 text-center">
-            <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black mb-6">Comprehensive Solutions for Your Construction Needs</h2>
+            <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black mb-6">Comprehensive solutions for your construction needs</h2>
             <p class="max-w-3xl mx-auto text-lg text-gray-700 mb-10 font-regular">
                 We offer a comprehensive range of top-quality materials backed by expert knowledge and reliable service. Our commitment to your satisfaction makes us the preferred choice.
             </p>
@@ -207,7 +207,7 @@
         <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
             <img src="https://placehold.co/600x400/f0f0f0/555555?text=Middle+East+Map+Concept" alt="[Imagen conceptual del mapa de Oriente Medio]" class="rounded-lg shadow-lg" onerror="this.src='https://placehold.co/600x400/f0f0f0/555555?text=Image+Not+Found'; this.alt='Placeholder Image';">
             <div>
-                <h2 class="text-3xl md:text-4xl font-extrabold mb-6">Expanding Our Reach Across the Middle East</h2>
+                <h2 class="text-3xl md:text-4xl font-extrabold mb-6">Expanding our reach across the Middle East</h2>
                 <p class="text-lg mb-4 font-regular">
                     As a forward-thinking company, RWN Construction FZCO has ambitious plans for regional expansion. Our goal is to extend our footprint to new markets and territories, leveraging our expertise and proven track record.
                 </p>
@@ -220,7 +220,7 @@
 
     <section id="contact" class="py-16 md:py-24 bg-gray-100">
         <div class="container mx-auto px-6">
-            <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black text-center mb-12">Let's Build Something Great Together</h2>
+            <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black text-center mb-12">Let's build something great together</h2>
             <div class="grid md:grid-cols-2 gap-12">
                 <div class="bg-corporate-white p-8 rounded-lg shadow-xl">
                     <h3 class="text-2xl font-extrabold text-corporate-black mb-6">Send Us a Message</h3>
