--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="#contact" class="bg-corporate-blue text-corporate-white px-8 py-3 rounded-md text-lg font-regular inline-block cta-button">Request a Quote</a>
             </div>
             <div class="bg-corporate-white p-8 rounded-lg shadow-xl">
-                <h3 class="text-2xl font-extrabold text-corporate-black mb-6 text-center">Get in Touch</h3>
+                <h3 class="text-2xl font-extrabold text-corporate-black mb-6 text-center">Get in touch</h3>
                 <form action="#" method="POST">
                     <div class="mb-4">
                         <label for="hero-name" class="block text-corporate-black mb-2 font-regular">Name</label>
@@ -97,7 +97,7 @@
                         <label for="hero-message" class="block text-corporate-black mb-2 font-regular">Message</label>
                         <textarea id="hero-message" name="message" rows="4" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-corporate-blue focus:border-corporate-blue" required></textarea>
                     </div>
-                    <button type="submit" class="w-full bg-corporate-blue text-corporate-white px-6 py-3 rounded-md font-regular hover:bg-opacity-90 cta-button">Send Message</button>
+                    <button type="submit" class="w-full bg-corporate-blue text-corporate-white px-6 py-3 rounded-md font-regular hover:bg-opacity-90 cta-button">Send message</button>
                 </form>
             </div>
         </div>
@@ -111,11 +111,11 @@
             </p>
             <div class="grid md:grid-cols-2 gap-10 max-w-4xl mx-auto text-left">
                 <div class="bg-corporate-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-extrabold text-corporate-blue mb-3">Our Foundation</h3>
+                    <h3 class="text-xl font-extrabold text-corporate-blue mb-3">Our foundation</h3>
                     <p class="text-gray-700 font-regular">Leveraging a solid base of experience in nuclear construction, luxury real estate, logistics, and international transport, our founders drive RWN towards success, ensuring expert knowledge and industry insight.</p>
                 </div>
                 <div class="bg-corporate-white p-6 rounded-lg shadow-md">
-                    <h3 class="text-xl font-extrabold text-corporate-blue mb-3">Our Commitment</h3>
+                    <h3 class="text-xl font-extrabold text-corporate-blue mb-3">Our commitment</h3>
                     <p class="text-gray-700 font-regular">We emphasize quality products, reliable service, and strong partnerships, establishing RWN FZCO as a trusted provider for contractors, developers, and construction professionals across the industry.</p>
                 </div>
             </div>
@@ -126,11 +126,11 @@
     <section id="mission-vision" class="py-16 md:py-24">
         <div class="container mx-auto px-6 grid md:grid-cols-2 gap-12 items-center">
             <div class="bg-corporate-blue text-corporate-white p-8 rounded-lg shadow-lg">
-                <h3 class="text-3xl font-extrabold mb-4">Our Mission</h3>
+                <h3 class="text-3xl font-extrabold mb-4">Our mission</h3>
                 <p class="text-lg font-regular">"Our mission is to provide a comprehensive range of top-quality building materials, exceptional service, and value-added solutions to our customers in the construction industry in Dubai. Through our expertise, reliability, and commitment to excellence, we aim to be the preferred supplier and trusted partner, facilitating the successful completion of construction projects and contributing to the growth and development of UAE region environment."</p>
             </div>
             <div class="bg-gray-100 text-corporate-black p-8 rounded-lg shadow-lg">
-                <h3 class="text-3xl font-extrabold text-corporate-blue mb-4">Our Vision</h3>
+                <h3 class="text-3xl font-extrabold text-corporate-blue mb-4">Our vision</h3>
                 <p class="text-lg font-regular">"To be the foremost supplier of construction materials in the Middle East region, known for our exceptional quality, innovative solutions, and unwavering commitment to customer success. We aim to expand our presence throughout the region while maintaining our reputation for excellence, reliability, and integrity."</p>
             </div>
         </div>
@@ -223,7 +223,7 @@
             <h2 class="text-3xl md:text-4xl font-extrabold text-corporate-black text-center mb-12">Let's build something great together</h2>
             <div class="grid md:grid-cols-2 gap-12">
                 <div class="bg-corporate-white p-8 rounded-lg shadow-xl">
-                    <h3 class="text-2xl font-extrabold text-corporate-black mb-6">Send Us a Message</h3>
+                    <h3 class="text-2xl font-extrabold text-corporate-black mb-6">Send us a message</h3>
                     <form action="#" method="POST">
                         <div class="mb-4">
                             <label for="contact-name" class="block text-corporate-black mb-2 font-regular">Name</label>
@@ -233,19 +233,15 @@
                             <label for="contact-email" class="block text-corporate-black mb-2 font-regular">Email</label>
                             <input type="email" id="contact-email" name="email" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-corporate-blue focus:border-corporate-blue" required>
                         </div>
-                         <div class="mb-4">
-                            <label for="contact-subject" class="block text-corporate-black mb-2 font-regular">Subject</label>
-                            <input type="text" id="contact-subject" name="subject" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-corporate-blue focus:border-corporate-blue">
-                        </div>
                         <div class="mb-6">
                             <label for="contact-message" class="block text-corporate-black mb-2 font-regular">Your Message</label>
                             <textarea id="contact-message" name="message" rows="5" class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-corporate-blue focus:border-corporate-blue" required></textarea>
                         </div>
-                        <button type="submit" class="w-full bg-corporate-blue text-corporate-white px-6 py-3 rounded-md font-regular hover:bg-opacity-90 cta-button">Submit Inquiry</button>
+                        <button type="submit" class="w-full bg-corporate-blue text-corporate-white px-6 py-3 rounded-md font-regular hover:bg-opacity-90 cta-button">Submit inquiry</button>
                     </form>
                 </div>
                 <div class="space-y-6">
-                     <h3 class="text-2xl font-extrabold text-corporate-black mb-4">Contact Details</h3>
+                     <h3 class="text-2xl font-extrabold text-corporate-black mb-4">Contact details</h3>
                      <div class="bg-corporate-white p-6 rounded-lg shadow-md">
                         <h4 class="text-lg font-extrabold text-corporate-blue mb-2">Email</h4>
                         <p class="text-gray-700 font-regular"><a href="mailto:rwnconstructionfzco@gmail.com" class="hover:underline">rwnconstructionfzco@gmail.com</a></p>
