--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <header class="bg-corporate-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <img src="logo.png" alt="RWN Construction FZCO Logo" class="h-12"> <div class="hidden md:flex space-x-6 font-regular">
+            <img src="/logo.png" alt="RWN Construction FZCO Logo" class="h-12"> <div class="hidden md:flex space-x-6 font-regular">
                 <a href="#about" class="hover:text-corporate-blue">About Us</a>
                 <a href="#mission-vision" class="hover:text-corporate-blue">Mission & Vision</a>
                 <a href="#values" class="hover:text-corporate-blue">Core Values</a>
