--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <header class="bg-corporate-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <img src="logo.png" alt="RWN Construction FZCO Logo" class="logo-header"> <div class="hidden md:flex space-x-6 font-regular">
+            <img src="/logo.png" alt="RWN Construction FZCO Logo" class="logo-header"> <div class="hidden md:flex space-x-6 font-regular">
                 <a href="#about" class="hover:text-corporate-blue">About Us</a>
                 <a href="#mission-vision" class="hover:text-corporate-blue">Mission & Vision</a>
                 <a href="#values" class="hover:text-corporate-blue">Core Values</a>
@@ -279,7 +279,7 @@
 
     <footer class="bg-corporate-black text-corporate-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <img src="logo.png" alt="RWN Construction FZCO Logo" class="logo-footer mx-auto mb-4"> <p class="text-sm font-regular mb-4">
+            <img src="/logo.png" alt="RWN Construction FZCO Logo" class="logo-footer mx-auto mb-4"> <p class="text-sm font-regular mb-4">
                 Your trusted partner for quality construction materials in the Middle East.
             </p>
             <nav class="flex justify-center space-x-4 mb-4 font-regular">
