--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
         /* --- NUEVO CÓDIGO CSS PARA EL TAMAÑO DEL LOGO --- */
         /* Aquí definimos el tamaño para el logo en la cabecera */
         .logo-header {
-            height: 4rem; /* Equivalente a h-16 en Tailwind. Puedes ajustar este valor */
+            height: 6rem; /* Equivalente a h-16 en Tailwind. Puedes ajustar este valor */
             width: auto; /* Mantiene la proporción */
         }
         /* Aquí definimos el tamaño para el logo en el pie de página */
         .logo-footer {
-            height: 3rem; /* Equivalente a h-12 en Tailwind. Puedes ajustar este valor */
+            height: 7rem; /* Equivalente a h-12 en Tailwind. Puedes ajustar este valor */
             width: auto; /* Mantiene la proporción */
         }
-        /* --- FIN DEL NUEVO CÓDIGO CSS --- */
+        /* --- FIN CÓDIGO CSS --- */
 
     </style>
 </head>
